--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/giovannirp/fullstack-node#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
